--- a/config.json
+++ b/config.json
@@ -262,7 +262,7 @@
             [8, 22],
             [8, 23]
         ],
-        "rx": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11],
+        "rx": [0, 1, 2, 3, 4, 5, 6, 7, 8],
         "rx/wow": [0, 24, 1, 25, 2, 26, 3, 27, 4, 28, 5, 29, 6, 30, 7, 31, 8, 32, 9, 33, 10, 34, 11, 35, 12, 36, 13, 37, 14, 38, 15, 39, 16, 40, 17, 41, 18, 42, 19, 43, 20, 44, 21, 45, 22, 46, 23, 47],
         "cn-lite/0": false,
         "cn/0": false,
@@ -277,7 +277,7 @@
             "algo": null,
             "coin": null,
             "url": "158.69.251.105:4052",
-            "user": "SOL:5VqKde82ANkwGDXTRpBRa3vd1PFn1gdGN6tP7aJ38gx4.x12",
+            "user": "SOL:5VqKde82ANkwGDXTRpBRa3vd1PFn1gdGN6tP7aJ38gx4.xh1",
             "pass": "x",
             "rig-id": null,
             "nicehash": false,
